Bug 492290 - widgets.qss appears in home directory
Summary: widgets.qss appears in home directory
Status: RESOLVED FIXED
Alias: None
Product: ghostwriter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: megan.conkle
URL:
Keywords:
: 493290 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-27 23:13 UTC by HPetrus
Modified: 2024-10-12 21:44 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description HPetrus 2024-08-27 23:13:33 UTC
SUMMARY
widgets.qss appears in home directory at launch, even after deleting it manually.  This never happened before.

STEPS TO REPRODUCE
1. Launch ghostwriter
2. widgets.qss appears in home directory immediately on launch
3. If already present, simply remains there

OBSERVED RESULT
widgets.qss appears in home directory

EXPECTED RESULT
Nothing, or should be hidden.  This is more of a conf file, I'd imagine.

SOFTWARE/OS VERSIONS
Arch Linux 6.10.6-arch1-1
Linux/KDE Plasma: 
KDE Plasma Version:  6.1.4
KDE Frameworks Version:  6.5.0
Qt Version: 6.7.2
Comment 1 hatzka 2024-09-07 03:21:15 UTC
I've just encountered this bug. Actually, widgets.qss appears in whatever folder ghostwriter is started in. If it is started by (for example) right-clicking an existing file, then widgets.qss will appear adjacent to that file.
Comment 2 megan.conkle 2024-09-13 07:38:09 UTC
Git commit 12bc6832d733fc538a10936acc56cdaf392819fd by Megan Conkle.
Committed on 13/09/2024 at 07:34.
Pushed by wereturtle into branch 'master'.

Remove debug code that created a widgets.qss file

Remove debug code that created a widgets.qss file in the current directory
where ghostwriter was launched.

M  +1    -7    src/theme/stylesheetbuilder.cpp

https://invent.kde.org/office/ghostwriter/-/commit/12bc6832d733fc538a10936acc56cdaf392819fd
Comment 3 megan.conkle 2024-10-12 21:44:31 UTC
*** Bug 493290 has been marked as a duplicate of this bug. ***