Remove debug code that created a widgets.qss file

Remove debug code that created a widgets.qss file in the current directory
where ghostwriter was launched.

BUG: 492290